# SEISM-T

./: .coveralls.yml  .travis.yml  CMakeLists.txt  README.md
examples/: examples.c  examples_01.c  examples_02.c
src/: common.c  seism_t.h  sgt_out.c  vel_out.c  vel_out.h
