cmake_minimum_required(VERSION 3.2)
project(SEISM_T)

set (CMAKE_C_STANDARD 99)

enable_language (Fortran)

find_package(MPI REQUIRED)
if (MPI_FOUND)
    message("")
    message("|    MPI FOUND")
    message("|    MPIEXEC                  = " ${MPIEXEC})
    message("|    MPI_C_COMPILER           = " ${MPI_C_COMPILER})
    message("|    MPI_C_INCLUDE_PATH       = " ${MPI_C_INCLUDE_PATH})
    message("|    MPI_C_LIBRARIES          = " ${MPI_C_LIBRARIES})
    message("|    MPI_CXX_COMPILER         = " ${MPI_CXX_COMPILER})
    message("|    MPI_CXX_INCLUDE_PATH     = " ${MPI_CXX_INCLUDE_PATH})
    message("|    MPI_CXX_LIBRARIES        = " ${MPI_CXX_LIBRARIES})
    message("|    MPI_Fortran_COMPILER     = " ${MPI_Fortran_COMPILER})
    message("|    MPI_Fortran_INCLUDE_PATH = " ${MPI_Fortran_INCLUDE_PATH})
    message("|    MPI_Fortran_LIBRARIES    = " ${MPI_Fortran_LIBRARIES})
    message("|    MPI_INCLUDE_PATH         = " ${MPI_INCLUDE_PATH})
    message("|    MPI_LIBRARY              = " ${MPI_LIBRARY})
endif (MPI_FOUND)
